Responsisive datatable added

--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -24,7 +24,7 @@
                         <h4>Requisitor Info :</h4><br/>
                     </div>
                     
-                    <table class="table table-light table-active table-primary">
+                    <table class="table table-light table-active table-primary dt-responsive nowrap">
                         <tr>
                             <td class="col-md-2-custom" style="width: 35%">@Html.DisplayName("Requisition Number : ")</td>
                             <td>@data.RequisitionNumber</td>
@@ -57,7 +57,7 @@
                         <h4>Journey Info :</h4><br/>
                     </div>
                     
-                    <table class="table table-light table-active table-primary">
+                    <table class="table table-light table-active table-primary dt-responsive nowrap">
                         <tr>
                             <td class="col-md-2-custom" style="width: 35%">@Html.DisplayName("Journey Date Time : ")</td>
                             <td>@data.StartDateTime</td>
