--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -13,7 +13,7 @@
             <br/>
             <h4>Assigned Requisition Info :</h4>
             <br/>
-            <table class="table table-light table-active table-primary">
+            <table class="table table-light table-active table-primary dt-responsive nowrap">
                 <tr>
                     <td style="width: 35%">@Html.DisplayNameFor(model => model.RequisitionId)</td>
                     <td>@Html.DisplayFor(model => model.RequisitionId)</td>
@@ -49,7 +49,7 @@
             <br />
             <h4>Journey Info :</h4>
             <br />
-            <table class="table table-light table-active table-primary">
+            <table class="table table-light table-active table-primary dt-responsive nowrap">
                 <tr>
                     <td style="width: 35%">@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.StartDateTime)</td>
@@ -84,7 +84,7 @@
             <br />
             <h4>Vehicle Info :</h4>
             <br />
-            <table class="table table-light table-active table-primary">
+            <table class="table table-light table-active table-primary dt-responsive nowrap">
                 <tr>
                     <td style="width: 35%">@Html.DisplayNameFor(model => model.Vehicle.BrandName)</td>
                     <td>@Html.DisplayFor(model => model.Vehicle.BrandName)</td>
@@ -113,7 +113,7 @@
             <br />
             <h4>Driver Info :</h4>
             <br />
-            <table class="table table-danger table-active table-primary">
+            <table class="table table-danger table-active table-primary dt-responsive nowrap">
                 <tr>
                     <td style="width: 35%">@Html.DisplayNameFor(model => model.Employee.FullName)</td>
                     <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
