--- a/RMS.App/Views/AssignRequisitions/Edit.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Edit.cshtml
@@ -13,7 +13,7 @@
             <div class="col-md-4">
                 <h4>Assigned Requisition Info :</h4>
                 <br/>
-                <table class="table table-light table-active table-primary">
+                <table class="table table-light table-active table-primary dt-responsive nowrap">
 
                     <tr>
                         <td style="width: 25%">@Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)</td>
@@ -45,7 +45,7 @@
             <div class="col-md-4">
                 <h4>Journey Info :</h4>
                 <br/>
-                <table class="table table-light table-active table-primary">
+                <table class="table table-light table-active table-primary dt-responsive nowrap">
                     <tr>
                         <td style="width: 25%">@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
                         <td>@Html.DisplayFor(model => model.Requisition.StartDateTime)</td>
@@ -76,7 +76,7 @@
             <div class="col-md-4">
                 <h4>Vehicle Information :</h4>
                 <br/>
-                <table class="table table-light table-active table-primary">
+                <table class="table table-light table-active table-primary dt-responsive nowrap">
                     <tr>
                         <td style="width: 25%">@Html.DisplayNameFor(model => model.Vehicle.BrandName)</td>
                         <td>@Html.DisplayFor(model => model.Vehicle.BrandName)</td>
@@ -105,7 +105,7 @@
             <div class="col-md-4">
                 <h4>Driver Information :</h4>
                 <br />
-                <table class="table table-danger table-active table-primary">
+                <table class="table table-danger table-active table-primary dt-responsive nowrap">
                     <tr>
                         <td style="width: 25%">@Html.DisplayNameFor(model => model.Employee.FullName)</td>
                         <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
@@ -128,7 +128,7 @@
             <div class="col-md-4">
                 <h4>Requisition Status Information :</h4>
                 <br/>
-                <table class="table table-danger table-active table-primary">
+                <table class="table table-danger table-active table-primary dt-responsive nowrap">
                     <tr>
                         <td style="width: 25%">@Html.DisplayNameFor(model => model.RequisitionStatus.StatusType)</td>
                         <td>@Html.DisplayFor(model => model.RequisitionStatus.StatusType)</td>
