--- a/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
@@ -9,7 +9,7 @@
 <hr/>
 
 <div class="container">
-    <table class="table table-light table-active table-primary">
+    <table class="table table-light table-active table-primary dt-responsive nowrap">
         <tr>
             <td style="width: 25%">@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
             <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
