--- a/RMS.App/Views/Home/AboutDeveloper.cshtml
+++ b/RMS.App/Views/Home/AboutDeveloper.cshtml
@@ -6,7 +6,11 @@
 @section styles{
 
 }
-<h3 style="text-align: center" class="table-success text-primary text-uppercase">About Developer</h3>
+<div class="table-success">
+    <br/>
+    <h3 style="text-align: center" class="text-primary text-uppercase">About Developer</h3>
+    <br/>
+</div>
 <hr/>
 <div class="container">
     <div class="row">
