--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -4,11 +4,13 @@
     Layout = null;
 }
 
+
+
 <div style="margin-left: 15px;">
     <p>
         @Html.ActionLink("Create New", "Create", null, htmlAttributes: new { @class = "btn btn-success" })
     </p>
-    <table id="example1" class="table table-striped table-bordered table-hover" style="width: 100%">
+    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
             <tr class="bg-info">
                 <th>
@@ -116,4 +118,4 @@
         </tfoot>
     </table>
 </div>
-    
+
