--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -6,7 +6,10 @@
 @section styles
 {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
+
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
+
 }
 <div class="container">
     <h2>Employee List</h2>
@@ -39,147 +42,150 @@
         </div>
     </div>
     <br/>
-    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
-        <thead>
-            <tr class="bg-info">
-                <th>
-                    SL
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FullName)
-                </th>
-                @*<th>
-                @Html.DisplayNameFor(model => model.OrganizationId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DepartmentId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DesignationId)
-            </th>*@
-                <th>
-                    @Html.DisplayNameFor(model => model.ContactNo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Email)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.NID)
-                </th>
-                @*<th>
-                @Html.DisplayNameFor(model => model.DrivingLicence)
-            </th>*@
-                <th>
-                    @Html.DisplayNameFor(model => model.BloodGroup)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EmployeeTypeId)
-                </th>
-                <th class="text-center">
-                    Action
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-        @{
-            var sl = 0;
-            if (Model.Count() != 0)
-            {
-                foreach (var item in Model)
-                {
-                    sl++;
-                    <tr>
-                        <td>
-                            @sl
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FullName)
-                        </td>
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.Organization.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Department.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Designation.Title)
-                            </td>*@
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ContactNo)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NID)
-                        </td>
-                        @*<td>
-                                @Html.DisplayFor(modelItem => item.DrivingLicence)
-                            </td>*@
-                        <td>
-                            @Html.DisplayFor(modelItem => item.BloodGroup)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.EmployeeType.Type)
-                        </td>
-                        <td class="text-right">
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
-                            
-                        </td>
-                    </tr>
-                }
-            }
-            else
-            {
-                <tr>
-                    <td class="text-center text-danger" colspan="8"> Data Not Found!</td>
-                </tr>
-            }
-        }
-        </tbody>
-        <tfoot>
-            <tr class="bg-secondary text-white">
-                <th>
-                    SL
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FullName)
-                </th>
-                @*<th>
-                @Html.DisplayNameFor(model => model.OrganizationId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DepartmentId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DesignationId)
-            </th>*@
-                <th>
-                    @Html.DisplayNameFor(model => model.ContactNo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Email)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.NID)
-                </th>
-                @*<th>
-                @Html.DisplayNameFor(model => model.DrivingLicence)
-            </th>*@
-                <th>
-                    @Html.DisplayNameFor(model => model.BloodGroup)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EmployeeTypeId)
-                </th>
-                <th class="text-center">
-                    Action
-                </th>
-            </tr>
-        </tfoot>
 
-    </table>
+        <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+            <thead>
+                <tr class="bg-info">
+                    <th>
+                        SL
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FullName)
+                    </th>
+                    @*<th>
+                        @Html.DisplayNameFor(model => model.OrganizationId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DepartmentId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DesignationId)
+                    </th>*@
+                    <th>
+                        @Html.DisplayNameFor(model => model.ContactNo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NID)
+                    </th>
+                    @*<th>
+                        @Html.DisplayNameFor(model => model.DrivingLicence)
+                    </th>*@
+                    <th>
+                        @Html.DisplayNameFor(model => model.BloodGroup)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EmployeeTypeId)
+                    </th>
+                    <th class="text-center">
+                        Action
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    var sl = 0;
+                    if (Model.Count() != 0)
+                    {
+                        foreach (var item in Model)
+                        {
+                            sl++;
+                            <tr>
+                                <td>
+                                    @sl
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FullName)
+                                </td>
+                                @*<td>
+                                    @Html.DisplayFor(modelItem => item.Organization.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Department.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Designation.Title)
+                                </td>*@
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ContactNo)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Email)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.NID)
+                                </td>
+                                @*<td>
+                                    @Html.DisplayFor(modelItem => item.DrivingLicence)
+                                </td>*@
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.BloodGroup)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.EmployeeType.Type)
+                                </td>
+                                <td class="text-right">
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+
+                                </td>
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td class="text-center text-danger" colspan="8"> Data Not Found!</td>
+                        </tr>
+                    }
+                }
+            </tbody>
+            <tfoot>
+                <tr class="bg-secondary text-white">
+                    <th>
+                        SL
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FullName)
+                    </th>
+                    @*<th>
+                        @Html.DisplayNameFor(model => model.OrganizationId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DepartmentId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DesignationId)
+                    </th>*@
+                    <th>
+                        @Html.DisplayNameFor(model => model.ContactNo)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NID)
+                    </th>
+                    @*<th>
+                        @Html.DisplayNameFor(model => model.DrivingLicence)
+                    </th>*@
+                    <th>
+                        @Html.DisplayNameFor(model => model.BloodGroup)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.EmployeeTypeId)
+                    </th>
+                    <th class="text-center">
+                        Action
+                    </th>
+                </tr>
+            </tfoot>
+
+        </table>
+
+    
 </div>
 
 @section scripts
@@ -188,6 +194,10 @@
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
     <script>
         $(document).ready(function () {
             $('#example').DataTable();
