--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -6,7 +6,10 @@
 @section styles
 {
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
+
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
+
 }
 <div class="container">
     <h2>Organization List</h2>
@@ -40,7 +43,7 @@
         </div>
     </div>
     <br/>
-    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
         <tr class="bg-info">
             <th>
@@ -128,6 +131,11 @@
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
+
     <script>
         $(document).ready(function () {
             $('#example').DataTable();
