--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -7,8 +7,12 @@
 @section styles{
 
     <link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet"/>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
+
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
+
 }
 <div class="col-md-12">
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#ownRequest">Request For Me</a> &nbsp;
@@ -25,7 +29,7 @@
 }
 <br/>
 <div class="col-md-12">
-    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
         <tr class="bg-info">
             <th>SL</th>
@@ -191,7 +195,7 @@
                 <h3 class="modal-title">My Requisition</h3>
                 <a href="#" class="close" data-dismiss="modal">&times;</a>
             </div>
-            <div class="modal-body table-info">
+            <div class="modal-body table-responsive" style="width: 100%" >
                 @Html.Action("RequisitionList", "Requisitions")
             </div>
             <div class="col-md-12 text-right">
@@ -223,22 +227,24 @@
 
 @Scripts.Render("~/bundles/jqueryval")
 
-<script src="~/Scripts/moment.js"></script>
+    <script src="~/Scripts/moment.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+    <script src="~/Scripts/RequisitionJs/RequisitionDataTime.js"></script>
 
-<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
 
-<script src="~/Scripts/bootstrap-datetimepicker.js"></script>
-<script src="~/Scripts/RequisitionJs/RequisitionDataTime.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
 
-
-<script>
+    <script>
+        
         $(document).ready(function () {
             $('#example').DataTable();
         });
         $(document).ready(function () {
             $('#example1').DataTable();
         });
-</script>
+    </script>
 }
