--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -35,7 +35,7 @@
         </div>
     </div>*@
 
-    <table id="example" class="table table-striped table-bordered table-hover table-responsive dt-responsive" style="width: 100%">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
             <tr class="bg-info">
                 <th>
