--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -5,117 +5,115 @@
 }
 
 
-
 <div style="margin-left: 15px;">
     <p>
-        @Html.ActionLink("Create New", "Create", null, htmlAttributes: new { @class = "btn btn-success" })
+        @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-success"})
     </p>
-    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+    <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
         <thead>
-            <tr class="bg-info">
-                <th>
-                    SL
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Employee.FullName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FromPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DestinationPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EndDateTime)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.PassengerQty)
-                    </th>
-                <th>
-                    Action
-                </th>
-            </tr>
+        <tr class="bg-info">
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FromPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DestinationPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PassengerQty)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
 
         </thead>
         <tbody>
-            @{
-                var sl = 0;
-                if (Model.Count() != 0)
+        @{
+            var sl = 0;
+            if (Model.Count() != 0)
+            {
+                foreach (var item in Model)
                 {
-                    foreach (var item in Model)
-                    {
-                        sl++;
-                        <tr>
-                            <td>
-                                @sl
-
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Employee.FullName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FromPlace)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DestinationPlace)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StartDateTime)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.EndDateTime)
-                            </td>
-                            <td>
-                                    @Html.DisplayFor(modelItem => item.PassengerQty)
-                                </td>
-                            <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id })
-                               
-                            </td>
-                        </tr>
-                    }
-                }
-                else
-                {
+                    sl++;
                     <tr>
-                        <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
+                        <td>
+                            @sl
+
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Employee.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FromPlace)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DestinationPlace)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EndDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PassengerQty)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                            @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})
+
+                        </td>
                     </tr>
                 }
             }
+            else
+            {
+                <tr>
+                    <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
+                </tr>
+            }
+        }
         </tbody>
         <tfoot>
-            <tr class="bg-secondary text-white">
-                <th>
-                    SL
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Employee.FullName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FromPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DestinationPlace)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartDateTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EndDateTime)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.PassengerQty)
-                    </th>
-                <th>
-                    Action
-                </th>
-            </tr>
+        <tr class="bg-secondary text-white">
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FromPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DestinationPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PassengerQty)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
         </tfoot>
     </table>
 </div>
-
