--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -69,7 +69,7 @@
 
             </div>
         </div>
-        <br/>
+        @*<br/>
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <div class="single-service">
@@ -107,7 +107,7 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </section>
 <!-- End service Area -->
