--- a/RMS.App/Views/Departments/Create.cshtml
+++ b/RMS.App/Views/Departments/Create.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "Create Department";
 }
+@section styles{
+    
+}
 
 <h2>Create Department</h2>
 <hr/>
@@ -18,7 +21,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-4">
-                @Html.DropDownList("OrganizationId",null,"Select", htmlAttributes: new {@class = "form-control"})
+                @Html.DropDownList("OrganizationId",null,"Select Organization", htmlAttributes: new {@class = "form-control", @id="searchableDD"})
                 @Html.ValidationMessageFor(model => model.OrganizationId, "", new {@class = "text-danger"})
             </div>
         </div>
@@ -55,5 +58,7 @@
 @section Scripts {
 
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
+    
     
 }
