--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="~/Content/css/animate.min.css">
     <link rel="stylesheet" href="~/Content/css/jquery-ui.css">
     <link rel="stylesheet" href="~/Content/css/owl.carousel.css">
+    <link href="~/Content/chosenDD/chosen.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/css/main.css">
     
     @RenderSection("styles", required: false)
@@ -86,8 +87,9 @@
     <script src="~/Content/js/jquery.nice-select.min.js"></script>
     <script src="~/Content/js/jquery-ui.js"></script>
     <script src="~/Content/js/mail-script.js"></script>
+    <script src="~/Scripts/chosenDD/chosen.jquery.min.js"></script>
     <script src="~/Content/js/main.js"></script>
-
+    
     @RenderSection("scripts", required: false)
     
 </body>
