--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -4,7 +4,7 @@
     <div class="header-top" >
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+                <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
 
                     <p class="float-left">
                         <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/bcc_logo.png" width="40" height="40" alt="Home Logo" title="Home BCC"/></a>
@@ -12,24 +12,22 @@
                     </p>
                 </div>
 
-                <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+                <div class="col-lg-6 col-sm-6 col-6 header-top-right no-padding">
                     <p class="float-right">
                         <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="#" title="Contact">+880123456789</a>
                         <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="mailto:support@bcc.gov.bd" title="Support mail">support@bcc.gov.bd</a>
                         <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="@Url.Action("Help", "Home")" title="Need user help!">Help!</a>
-                        @*<a class="icons" href="tel:+880123456789">
-                            <span class="lnr lnr-phone-handset"></span>
-                        </a>
-                        <a class="icons" href="mailto:support@bcc.gov.bd">
-                            <span class="lnr lnr-envelope"></span>
-                        </a>*@
-                    </p>
-                    
-                </div>
-                @*<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
 
-                </div>*@
-            </div>
+                    </p>
+
+                </div>
+                <div class="col-lg-2 col-sm-2 col-2 header-top-right no-padding">
+                    @Html.Partial("_LoginPartial")
+                </div>
+                    @*<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+
+            </div>*@
+                </div>
         </div>
     </div>
     <div class="container main-menu">
@@ -109,13 +107,14 @@
                                 </ul>
                             </li>*@
                         <li class="menu-has-children">
-                                <a href="#">Gate Pass</a>
+                            <a href="#">Gate Pass</a>
 
-                                <ul>
-                                    <li>@Html.ActionLink("Check-Out", "Index", "GatePass")</li>
-                                    <li>@Html.ActionLink("Check-In", "CheckIn", "GatePass")</li>
-                                </ul>
-                            </li>
+                            <ul>
+                                <li>@Html.ActionLink("Check-Out", "Index", "GatePass")</li>
+                                <li>@Html.ActionLink("Check-In", "CheckIn", "GatePass")</li>
+                            </ul>
+                        </li>
+                        
                     </ul>        
                 </nav><!-- #nav-menu-container -->
             
