Requisition sumbit datatime added

--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -38,8 +38,9 @@
             <th>Journey Date Time</th>
             <th>Return Date Time</th>
             <th>Passenger Qty</th>
-            <th>Description</th>
+            <th>Submited Date Time</th>
             <th>Request For</th>
+            <th>Description</th>
         </tr>
         </thead>
         <tbody>
@@ -63,8 +64,9 @@
                         <td>@item.StartDateTime</td>
                         <td>@item.EndDateTime</td>
                         <td>@item.PassengerQty</td>
-                        <td>@item.Description</td>
+                        <td>@item.SubmitDateTime</td>
                         <td>@item.RequestFor</td>
+                        <td>@item.Description</td>
                     </tr>
                 }
             }
@@ -79,8 +81,9 @@
             <th>Journey Date Time</th>
             <th>Return Date Time</th>
             <th>Passenger Qty</th>
-            <th>Description</th>
+            <th>Submited Date Time</th>
             <th>Request For</th>
+            <th>Description</th>
         </tr>
         </tfoot>
     </table>
