--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                 <p class="col-lg-8 col-sm-12 footer-text m-0">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script> All rights reserved | this product make by <i class="fa fa-heart-o" aria-hidden="true"></i> &nbsp; <a href="@Url.Action("AboutDeveloper","Home")" target="_blank"><strong>Developer</strong></a>
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved | this product make by <i class="fa fa-heart-o" aria-hidden="true"></i> &nbsp; <a href="@Url.Action("AboutDeveloper","Home")" target="_blank"><strong>Developers</strong></a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
                 <div class="col-lg-4 col-sm-12 footer-social">
