--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -49,7 +49,7 @@
                     @Html.DisplayNameFor(model => model.RequisitionNumber)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RequisitionId)
+                    @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
                 </th>
                 <th class="text-center">
                     Action
@@ -76,7 +76,7 @@
                             @Html.DisplayFor(modelItem => item.RequisitionNumber)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.RequisitionId)
+                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
                         </td>
                         <td class="text-right">
                             @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-primary btn-sm" })
@@ -108,7 +108,7 @@
                     @Html.DisplayNameFor(model => model.RequisitionNumber)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RequisitionId)
+                    @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
                 </th>
                 <th class="text-center">
                     Action
