--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -90,7 +90,13 @@
                     @Html.ValidationMessageFor(model => model.PassengerQty, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            <div class="form-group row" hidden="hidden">
+                @Html.LabelFor(model => model.SubmitDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.SubmitDateTime, new { htmlAttributes = new { @class = "form-control",@readOnly="readonly" } })
+                    @Html.ValidationMessageFor(model => model.SubmitDateTime, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="form-group row">
                 @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-8">
@@ -109,7 +115,7 @@
             <br/>
             <div class="form-group row">
                 <div class="col-md-3"></div>
-                <div class="col-md-5">
+                <div class="col-md-8">
                     <input type="submit" value="Update" class="btn btn-success" /> &nbsp;
                     @Html.ActionLink("Back to List", "Create", null, new { @class = "btn btn-info" })
                 </div>
@@ -121,9 +127,8 @@
 @section Scripts {
 
     @Scripts.Render("~/bundles/jqueryval")
-    @*<script src="~/Scripts/jquery-3.2.1.js"></script>*@
+
     <script src="~/Scripts/moment.js"></script>
-    @*<script src="~/Scripts/bootstrap.js"></script>*@
     <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
     <script src="~/Scripts/RequisitionJs/RequisitionDataTime.js"></script>
 
